2017-02-17  Michael Guravage  <guravage@weddell.itf.cwi.nl>

	* views.py (QuotaView.get_objects): Aappend object review state to list of results.

2015-04-14  Michael Guravage  <guravage@weddell.itf.cwi.nl>

	* views.py: Initial commit.