@@ -1,6 +1,7 @@
 2017-02-17  Michael Guravage  <guravage@weddell.itf.cwi.nl>
 
 	* test_mordac.py (MordacQuotaViewIntegrationTest.test_quota_objects): Add test for object state.
+	(MordacQuotaViewIntegrationTest.test_quota_objects): Correct flake8 complaints.
 
 2015-04-14  Michael Guravage  <guravage@weddell.itf.cwi.nl>
 
