@@ -1,6 +1,7 @@
 2017-02-17  Michael Guravage  <guravage@weddell.itf.cwi.nl>
 
-	* views.py (QuotaView.get_objects): Aappend object review state to list of results.
+	* views.py (QuotaView.get_objects): Append object review state to list of results.
+	(QuotaView.get_objects): Correct flake8 complaints.
 
 2015-04-14  Michael Guravage  <guravage@weddell.itf.cwi.nl>
 
